# ycombinator-news

./: .gitignore  README.md  pyproject.toml
data/: hacker_news_news_20240804.csv  hacker_news_news_20240805.csv  hacker_news_news_20240806.csv  hacker_news_news_20240814.csv  hacker_news_page_1_20240804_220337.html  hacker_news_page_1_20240804_221421.html  hacker_news_page_2_20240804_220337.html  hacker_news_page_2_20240804_221421.html  hacker_news_page_3_20240804_220337.html  hacker_news_page_3_20240804_221421.html  tweets.csv
notebooks/: Vitacora.md  exploring-first-scrapped-data.py  ollama-test-01.py  testing-date-output.py  time-hour-function.py
scripts/: run_scripts.ps1
src/: hacker_news_scrapper.py  hacker_news_table_extracter.py  ollama-test-01.py
