[tool.poetry]
name = "scrapping ycombinator"
version = "0.1.0"
description = ""
authors = ["aestrad7 <andresf.estrada.10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = ">=1.26.0,<2.0.0"
langchain_community = "^0.2.11"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

description = "Web scrapper test 1"
